--- a/weather_backend/templates/location.html
+++ b/weather_backend/templates/location.html
@@ -2,5 +2,5 @@
 
 {% block content %}
   <h2>GEO API</h2>
-  <p>Your ip address is <strong>{{ ip }}</strong>, and you are probably in <strong>{{ country }}</strong> right now.</p>
+  <p>Your ip address is <strong>{{ ip }}</strong>, and you are probably in <strong>{{ country }}</strong> right now. Latitude: {{ latitude }} longitude: {{ longitude }}</p>
 {% endblock %}
