APIs working as expected, need to move from django front end to react

--- a/weather_backend/templates/weather.html
+++ b/weather_backend/templates/weather.html
@@ -2,6 +2,6 @@
 
 {% block content %}
   <h2>WEATHER API</h2>
-  <p>The weather in <strong>{{ city }}</strong>  and the weather is {{ weather_desc }}
+  <p>You are in <strong>{{ city_name }}</strong>  and the weather is {{ weather_desc }}
 
 {% endblock %}
